# pluribus

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: config.rs  main.rs  utils.rs
src/commands/: login.rs  mod.rs  serve.rs  test.rs
src/gateway/: middleware.rs  mod.rs  state.rs
src/gateway/handlers/: health.rs  messages.rs  mod.rs
src/providers/: config.rs  mod.rs
src/providers/claude_code/: constants.rs  mod.rs  oauth.rs  tool_spoof.rs
